--- a/vignettes/using-utvizsunburst.Rmd
+++ b/vignettes/using-utvizsunburst.Rmd
@@ -32,6 +32,15 @@ The dataset contains `r ncol(admissions)` variables and `r nrow(admissions)` obs
 
 # A simple sunburst chart
 
+The function `sunburst()` generates a sunburst chart. The two main arguments to this function are:
+
+- `data` (which provides the data-frame for the chart);
+- and `steps` (indicating which columns of that data-frame should be presented in the chart, from
+inner-most to outer-most position).
+
 ```{r}
-sunburst(admissions)
+sunburst(
+  admissions,
+  steps = c("student_type", "gpa", "outcome")
+)
 ```
