--- a/vignettes/using-utvizsunburst.Rmd
+++ b/vignettes/using-utvizsunburst.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 library(utVizSunburst)
 ```
 
-# An example dataset
+## An example dataset
 
 In the utVizSunburst package, and example dataset "admissions" is available.
 
